tests/ui/error-codes/E0308-2.stderr
error[E0308]: mismatched types
  --> $DIR/E0308-2.rs:9:13
   |
LL | impl Eq for &dyn DynEq {}
   |             ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected trait `<&dyn DynEq as PartialEq>`
              found trait `<&(dyn DynEq + 'static) as PartialEq>`
note: the anonymous lifetime as defined here...
  --> $DIR/E0308-2.rs:9:13
   |
LL | impl Eq for &dyn DynEq {}
   |             ^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
